--- a/config-repository/discovery-local.yml
+++ b/config-repository/discovery-local.yml
@@ -6,8 +6,10 @@ spring:
     name: eureka-server
 
 eureka:
+  instance:
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/ #http://localhost:8761/eureka
+      defaultZone: http://localhost:8761/eureka #http://${eureka.instance.hostname}:${server.port}/eureka/
