--- a/config-repository/discovery-config-local.yml
+++ b/config-repository/discovery-config-local.yml
@@ -1,16 +1,11 @@
 server:
   port: 8761
+eureka:
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    
 
 spring:
   application:
     name: eureka-server
-
-    
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://localhost:8761/eureka #http://${eureka.instance.hostname}:${server.port}/eureka/
