--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8888
+  port: 9901
 
 spring:
   application:
@@ -27,32 +27,13 @@ spring:
       client:
         registration:
           kakao:
-            client-name: Kakao
-            client-id: 182aa593d6c9dd9a5ab2c20104a1ce9b
-            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
-            #redirect-uri: "{baseUrl}/{action}/oauth2/callback/{registrationId}"
-            client-authentication-method: POST
-            authorization-grant-type: authorization_code
-            scope: profile_nickname, account_email
+           
 
           naver:
-            client-name: Naver
-            client-id: UE2XIVBkw89rDhSDbSe4
-            client-secret: sJkHASTjKZ
-            #redirect-uri: "{baseUrl}/{action}/oauth2/callback/{registrationId}"
-            redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}" # (== http://localhost:8080/login/oauth2/code/naver)
-            authorization-grant-type: authorization_code
-            scope: name, email
+           
 
           google:
-            client-name: google
-            client-id: 129842654485-c84i13kt2mj4kghbq25kbn4t2kdjh97b.apps.googleusercontent.com
-            client-secret: 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
-            #default http://localhost:8080/login/oauth2/code/google
-            redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
-            scope:
-              - email
-              - profile
+           
 
         provider:
           kakao:
@@ -69,7 +50,7 @@ spring:
 
 app:
   jwt:
-    secretKey: 239192-3999-01002-39123
+    secretKey: 12345-12345-12345-123345
     ACCESS_TOKEN_EXPIRE_TIME: 1800000    # 1000 * 60 * 30   30분
     REFRESH_TOKEN_EXPIRE_TIME: 3600000   # 1000 * 60 * 60   60분
 
