--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
         registration:
           kakao:
             client-name: Kakao
-            client-id: 182aa593d6c9dd9a5ab2c20104a1ce9b
+            client-id: 직접입력하세요
             redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
 #            redirect-uri: "http://localhost:80/{action}/oauth2/code/{registrationId}"
             client-authentication-method: POST
@@ -37,8 +37,8 @@ spring:
 
           naver:
             client-name: Naver
-            client-id: UE2XIVBkw89rDhSDbSe4
-            client-secret: sJkHASTjKZ
+            client-id: 직접입력하세요
+            client-secret: 직접입력하세요
 #            redirect-uri: "http://localhost:80/{action}/oauth2/code/{registrationId}"
             redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"          # (== http://localhost:80/login/oauth2/code/naver) 게이트에이 하드코딩방식
             authorization-grant-type: authorization_code
@@ -46,8 +46,8 @@ spring:
 
           google:
             client-name: google
-            client-id: 129842654485-c84i13kt2mj4kghbq25kbn4t2kdjh97b.apps.googleusercontent.com
-            client-secret: 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
+            client-id: 직접입력하세요
+            client-secret: 직접입력하세요
             #default http://localhost:8080/login/oauth2/code/google
             redirect-uri: "{baseUrl}/{action}/oauth2/code/{registrationId}"
             scope:
@@ -56,7 +56,6 @@ spring:
 
         provider:
           kakao:
-            #여기를 lb://API-GATEWAY
             authorization-uri: https://kauth.kakao.com/oauth/authorize    #카카오 login Page
 
             token-uri: https://kauth.kakao.com/oauth/token
@@ -71,7 +70,7 @@ spring:
 
 app:
   jwt:
-    secretKey: 239192-3999-01002-39123
+    secretKey: 1234-1234-1234-1234
     ACCESS_TOKEN_EXPIRE_TIME: 1800000    # 1000 * 60 * 30   30분
     REFRESH_TOKEN_EXPIRE_TIME: 3600000   # 1000 * 60 * 60   60분
 
